--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,8 @@ Authors@R: person("Thierry", "Warin", email = "thierry.warin@hec.ca", role =c("a
 Description: Researchers and analysts have access to more than 7,500 innovative companies worldwide, which are or have been part of the top 1,000 innovative companies. They can access the six parameters that compose the global IRI Scoreboard's data on R&D: Country, Year, Company's name, Industry, Indicator and Company's rank. Please cite: Warin, Th. (2020) "iiriR: An R Package for the EU Industrial R&D Investment Scoreboard", <10.6084/m9.figshare.11774640.v5>.
 Imports: dplyr, reshape2, ggplot2, curl, ochRe, stringr, stats
 License: MIT + file LICENSE
+URL: https://warint.github.io/innovation_pharma_china/
+BugReports: https://github.com/warint/innovation_pharma_china/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
